--- a/apps/backend/src/plugins/blog/config.json
+++ b/apps/backend/src/plugins/blog/config.json
@@ -1,20 +1,12 @@
 {
-  "name": "Blog",
-  "description": "Write an Awesome Articles.",
   "code": "blog",
+  "name": "Blog",
   "author": "VitNode",
   "author_url": "https://vitnode.com/",
-  "support_url": "https://vitnode.com/",
+  "description": "Write and publish your articles.",
+  "support_url": "https://github.com/VitNode/vitnode_dev_blog_plugin/issues",
   "allow_default": true,
-  "nav": [
-    {
-      "code": "categories",
-      "icon": "boxes",
-      "keywords": [
-        "blog categories"
-      ]
-    }
-  ],
-  "version": "0.0.2",
-  "version_code": 2
+  "nav": [],
+  "version": "0.0.1",
+  "version_code": 1
 }
