--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -4,33 +4,37 @@
   "private": true,
   "scripts": {
     "config:init": "vitnode-frontend init",
-    "dev": "vitnode-frontend init && next dev --turbo",
+    "dev": "vitnode-frontend dev && next dev --turbo",
     "build": "next build",
     "start": "next start",
+    "start:prod": "node server.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.9.0",
+    "@hookform/resolvers": "^3.9.1",
     "geist": "^1.3.1",
-    "lucide-react": "^0.441.0",
-    "next": "15.0.0-canary.155",
-    "next-intl": "^3.19.1",
-    "react": "19.0.0-rc-fb9a90fa48-20240614",
-    "react-dom": "19.0.0-rc-fb9a90fa48-20240614",
-    "react-hook-form": "^7.53.0",
-    "vitnode-frontend": "0.0.9-canary.52"
+    "lucide-react": "^0.460.0",
+    "next": "^15.0.3",
+    "next-intl": "^3.25.1",
+    "react": "19.0.0-rc.1",
+    "react-dom": "19.0.0-rc.1",
+    "react-hook-form": "^7.53.2",
+    "recharts": "^2.13.3",
+    "sonner": "^1.7.0",
+    "vitnode-frontend": "^0.0.10-canary.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^22.5.5",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
+    "@types/node": "^22.9.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.10.0",
-    "eslint-config-typescript-vitnode": "0.0.9-canary.52",
-    "graphql-tag": "^2.12.6",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.11",
-    "typescript": "^5.6.2"
+    "eslint-config-typescript-vitnode": "^0.0.10-canary.7",
+    "postcss": "^8.4.49",
+    "shared": "workspace:*",
+    "tailwindcss": "^3.4.15",
+    "typescript": "^5.6.3",
+    "vitnode-shared": "^0.0.10-canary.7"
   }
 }
