--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "vitnode-dev-plugins",
+  "name": "vitnode_dev_blog_plugin",
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "config:init": "turbo config:init",
     "dev": "turbo dev",
     "build": "turbo build",
     "start": "turbo start",
-    "codegen": "turbo codegen",
     "db": "turbo db",
     "lint": "turbo lint",
     "lint:fix": "turbo lint:fix",
-    "docker:dev": "docker compose -f ./docker-compose-dev.yml -p vitnode-dev-vitnode-dev-plugins up -d"
+    "docker:dev": "docker compose -f ./docker-compose-dev.yml -p vitnode-dev-vitnode_dev_blog_plugin up -d"
   },
   "overrides": {},
-  "devDependencies": {
-    "eslint-config-typescript-vitnode": "0.0.9-canary.48",
-    "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.6",
-    "turbo": "^2.1.2"
+  "pnpm": {
+    "overrides": {
+      "react-is": "19.0.0-rc.1"
+    }
   },
-  "packageManager": "pnpm@9.5.0",
+  "devDependencies": {
+    "eslint-config-typescript-vitnode": "^0.0.10-canary.7",
+    "turbo": "^2.3.0"
+  },
+  "packageManager": "pnpm@9.12.2",
   "workspaces": [
     "apps/*"
   ]
