--- a/turbo.json
+++ b/turbo.json
@@ -1,5 +1,6 @@
 {
   "$schema": "https://turbo.build/schema.json",
+  "ui": "tui",
   "tasks": {
     "build": {
       "outputs": [".next/**", "!.next/cache/**", "dist/**"],
@@ -9,13 +10,6 @@
       "outputs": [".next/**", "!.next/cache/**", "dist/**"],
       "dependsOn": ["^start"],
       "persistent": true
-    },
-    "codegen": {
-      "dependsOn": ["^codegen"],
-      "cache": false
-    },
-    "config:init": {
-      "dependsOn": ["^config:init"]
     },
     "lint": {
       "dependsOn": ["^lint"]
