--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "drizzle-kit": "drizzle-kit",
     "config:init": "vitnode-backend init",
-    "dev": "pnpm config:init && cross-env NODE_ENV=development nest start -w",
+    "dev": "vitnode-backend init && cross-env NODE_ENV=development nest start -w",
     "build": "nest build",
     "start": "node dist/main",
     "lint": "eslint .",
@@ -13,32 +13,32 @@
     "db": "vitnode-backend db"
   },
   "dependencies": {
-    "@nestjs/common": "^10.4.8",
-    "@nestjs/core": "^10.4.8",
-    "@nestjs/platform-express": "^10.4.8",
+    "@nestjs/common": "^10.4.10",
+    "@nestjs/core": "^10.4.10",
+    "@nestjs/platform-express": "^10.4.10",
     "@nestjs/schedule": "^4.1.1",
     "@nestjs/throttler": "^6.2.1",
     "@react-email/components": "^0.0.28",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "drizzle-kit": "^0.28.1",
-    "drizzle-orm": "^0.36.3",
+    "drizzle-orm": "^0.36.4",
     "react": "19.0.0-rc.1",
     "react-dom": "19.0.0-rc.1",
     "reflect-metadata": "^0.2.2",
-    "vitnode-backend": "^0.0.10-canary.7"
+    "vitnode-backend": "0.0.10-canary.16"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.4.7",
+    "@nestjs/cli": "^10.4.8",
     "@nestjs/schematics": "^10.2.3",
-    "@swc/cli": "^0.5.0",
+    "@swc/cli": "^0.5.1",
     "@types/express": "^5.0.0",
-    "@types/node": "^22.9.0",
+    "@types/node": "^22.10.0",
     "@types/react": "^18.3.12",
     "cross-env": "^7.0.3",
-    "eslint-config-typescript-vitnode": "^0.0.10-canary.7",
+    "eslint-config-typescript-vitnode": "0.0.10-canary.16",
     "shared": "workspace:*",
-    "typescript": "^5.6.3",
-    "vitnode-shared": "^0.0.10-canary.7"
+    "typescript": "^5.7.2",
+    "vitnode-shared": "0.0.10-canary.16"
   }
 }
