--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "config:init": "vitnode-frontend init",
-    "dev": "vitnode-frontend dev && next dev --turbo",
+    "postinstall": "vitnode-frontend init",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "start:prod": "node server.js",
@@ -14,27 +14,27 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
     "geist": "^1.3.1",
-    "lucide-react": "^0.460.0",
+    "lucide-react": "^0.462.0",
     "next": "^15.0.3",
-    "next-intl": "^3.25.1",
+    "next-intl": "^3.25.3",
     "react": "19.0.0-rc.1",
     "react-dom": "19.0.0-rc.1",
     "react-hook-form": "^7.53.2",
     "recharts": "^2.13.3",
     "sonner": "^1.7.0",
-    "vitnode-frontend": "^0.0.10-canary.7",
+    "vitnode-frontend": "0.0.10-canary.16",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^22.9.0",
+    "@types/node": "^22.10.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.20",
-    "eslint-config-typescript-vitnode": "^0.0.10-canary.7",
+    "eslint-config-typescript-vitnode": "0.0.10-canary.16",
     "postcss": "^8.4.49",
     "shared": "workspace:*",
     "tailwindcss": "^3.4.15",
-    "typescript": "^5.6.3",
-    "vitnode-shared": "^0.0.10-canary.7"
+    "typescript": "^5.7.2",
+    "vitnode-shared": "0.0.10-canary.16"
   }
 }
