--- a/apps/shared/package.json
+++ b/apps/shared/package.json
@@ -16,16 +16,16 @@
     }
   },
   "dependencies": {
-    "@nestjs/common": "^10.4.8",
+    "@nestjs/common": "^10.4.10",
     "@nestjs/swagger": "^8.0.7"
   },
   "devDependencies": {
     "@types/multer": "^1.4.12",
-    "@types/node": "^22.9.0",
+    "@types/node": "^22.10.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "eslint-config-typescript-vitnode": "^0.0.10-canary.7",
-    "typescript": "^5.6.3",
-    "vitnode-shared": "^0.0.10-canary.7"
+    "eslint-config-typescript-vitnode": "0.0.10-canary.16",
+    "typescript": "^5.7.2",
+    "vitnode-shared": "0.0.10-canary.16"
   }
 }
