--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "config:init": "turbo config:init",
     "dev": "turbo dev",
     "build": "turbo build",
     "start": "turbo start",
     "db": "turbo db",
     "lint": "turbo lint",
     "lint:fix": "turbo lint:fix",
-    "docker:dev": "docker compose -f ./docker-compose-dev.yml -p vitnode-dev-vitnode_dev_blog_plugin up -d"
+    "docker:dev": "docker compose -f ./docker-compose-dev.yml -p vitnode-dev-vitnode-page up -d",
+    "docker:prod": "docker compose -f ./docker-compose.yml -p vitnode-prod-vitnode-page up -d"
   },
   "overrides": {},
   "pnpm": {
@@ -18,8 +20,8 @@
     }
   },
   "devDependencies": {
-    "eslint-config-typescript-vitnode": "^0.0.10-canary.7",
-    "turbo": "^2.3.0"
+    "eslint-config-typescript-vitnode": "0.0.10-canary.16",
+    "turbo": "^2.3.3"
   },
   "packageManager": "pnpm@9.12.2",
   "workspaces": [
