feat(blog): Add example post req for create category

--- a/apps/shared/tsconfig.json
+++ b/apps/shared/tsconfig.json
@@ -3,8 +3,8 @@
   "extends": "eslint-config-typescript-vitnode/tsconfig.nest.json",
   "compilerOptions": {
     "target": "ESNext",
-    "module": "commonjs",
-    "moduleResolution": "Node",
+    "module": "Node16",
+    "moduleResolution": "Node16",
     "outDir": "./dist",
     "rootDir": "./plugins",
     "esModuleInterop": true,
