--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -17,6 +17,7 @@
     "@nestjs/core": "^10.4.13",
     "@nestjs/platform-express": "^10.4.13",
     "@nestjs/schedule": "^4.1.1",
+    "@nestjs/swagger": "^8.1.0",
     "@nestjs/throttler": "^6.2.1",
     "@react-email/components": "^0.0.29",
     "class-transformer": "^0.5.1",
@@ -26,7 +27,7 @@
     "react": "19.0.0-rc.1",
     "react-dom": "19.0.0-rc.1",
     "reflect-metadata": "^0.2.2",
-    "vitnode-backend": "0.0.10-canary.24"
+    "vitnode-backend": "0.0.10-canary.25"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.4.8",
@@ -36,9 +37,9 @@
     "@types/node": "^22.10.1",
     "@types/react": "^18.3.13",
     "cross-env": "^7.0.3",
-    "eslint-config-typescript-vitnode": "0.0.10-canary.24",
+    "eslint-config-typescript-vitnode": "0.0.10-canary.25",
     "shared": "workspace:*",
     "typescript": "^5.7.2",
-    "vitnode-shared": "0.0.10-canary.24"
+    "vitnode-shared": "0.0.10-canary.25"
   }
 }
