--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -13,6 +13,7 @@
     "db": "vitnode-backend db"
   },
   "dependencies": {
+    "@nestjs/cache-manager": "3.0.0-next.0",
     "@nestjs/common": "^10.4.13",
     "@nestjs/core": "^10.4.13",
     "@nestjs/platform-express": "^10.4.13",
@@ -27,7 +28,7 @@
     "react": "19.0.0-rc.1",
     "react-dom": "19.0.0-rc.1",
     "reflect-metadata": "^0.2.2",
-    "vitnode-backend": "0.0.10-canary.29"
+    "vitnode-backend": "0.0.10-canary.31"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.4.8",
@@ -37,9 +38,9 @@
     "@types/node": "^22.10.1",
     "@types/react": "^18.3.13",
     "cross-env": "^7.0.3",
-    "eslint-config-typescript-vitnode": "0.0.10-canary.29",
+    "eslint-config-typescript-vitnode": "0.0.10-canary.31",
     "shared": "workspace:*",
     "typescript": "^5.7.2",
-    "vitnode-shared": "0.0.10-canary.29"
+    "vitnode-shared": "0.0.10-canary.31"
   }
 }
