--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -14,29 +14,29 @@
   },
   "dependencies": {
     "@nestjs/cache-manager": "3.0.0-next.0",
-    "@nestjs/common": "^10.4.13",
-    "@nestjs/core": "^10.4.13",
-    "@nestjs/platform-express": "^10.4.13",
-    "@nestjs/schedule": "^4.1.1",
+    "@nestjs/common": "^10.4.15",
+    "@nestjs/core": "^10.4.15",
+    "@nestjs/platform-express": "^10.4.15",
+    "@nestjs/schedule": "^4.1.2",
     "@nestjs/swagger": "^8.1.0",
-    "@nestjs/throttler": "^6.2.1",
-    "@react-email/components": "^0.0.29",
+    "@nestjs/throttler": "^6.3.0",
+    "@react-email/components": "^0.0.31",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "drizzle-kit": "^0.28.1",
-    "drizzle-orm": "^0.36.4",
-    "react": "19.0.0-rc.1",
-    "react-dom": "19.0.0-rc.1",
+    "drizzle-kit": "^0.30.1",
+    "drizzle-orm": "^0.38.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "reflect-metadata": "^0.2.2",
     "vitnode-backend": "0.0.10-canary.31"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.4.8",
+    "@nestjs/cli": "^10.4.9",
     "@nestjs/schematics": "^10.2.3",
     "@swc/cli": "^0.5.2",
     "@types/express": "^5.0.0",
-    "@types/node": "^22.10.1",
-    "@types/react": "^18.3.13",
+    "@types/node": "^22.10.2",
+    "@types/react": "^19.0.1",
     "cross-env": "^7.0.3",
     "eslint-config-typescript-vitnode": "0.0.10-canary.31",
     "shared": "workspace:*",
