--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -14,21 +14,21 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
     "geist": "^1.3.1",
-    "lucide-react": "^0.466.0",
-    "next": "^15.0.3",
-    "next-intl": "^3.25.3",
-    "react": "19.0.0-rc.1",
-    "react-dom": "19.0.0-rc.1",
-    "react-hook-form": "^7.53.2",
-    "recharts": "^2.14.1",
-    "sonner": "^1.7.0",
+    "lucide-react": "^0.468.0",
+    "next": "^15.1.0",
+    "next-intl": "^3.26.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.1",
+    "recharts": "^2.15.0",
+    "sonner": "^1.7.1",
     "vitnode-frontend": "0.0.10-canary.31",
-    "zod": "^3.23.8"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@types/node": "^22.10.1",
-    "@types/react": "^18.3.13",
-    "@types/react-dom": "^18.3.1",
+    "@types/node": "^22.10.2",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.2",
     "autoprefixer": "^10.4.20",
     "eslint-config-typescript-vitnode": "0.0.10-canary.31",
     "postcss": "^8.4.49",
