--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -24,11 +24,11 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "drizzle-kit": "^0.30.1",
-    "drizzle-orm": "^0.38.2",
+    "drizzle-orm": "^0.38.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "reflect-metadata": "^0.2.2",
-    "vitnode-backend": "0.0.10-canary.35"
+    "vitnode-backend": "0.1.0-rc.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.4.9",
@@ -38,9 +38,9 @@
     "@types/node": "^22.10.2",
     "@types/react": "^19.0.2",
     "cross-env": "^7.0.3",
-    "eslint-config-typescript-vitnode": "0.0.10-canary.35",
+    "eslint-config-typescript-vitnode": "0.1.0-rc.0",
     "shared": "workspace:*",
     "typescript": "^5.7.2",
-    "vitnode-shared": "0.0.10-canary.35"
+    "vitnode-shared": "0.1.0-rc.0"
   }
 }
