--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -14,15 +14,15 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
     "geist": "^1.3.1",
-    "lucide-react": "^0.468.0",
-    "next": "^15.1.2",
+    "lucide-react": "^0.469.0",
+    "next": "^15.1.3",
     "next-intl": "^3.26.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.1",
+    "react-hook-form": "^7.54.2",
     "recharts": "^2.15.0",
     "sonner": "^1.7.1",
-    "vitnode-frontend": "0.0.10-canary.35",
+    "vitnode-frontend": "0.1.0-rc.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -30,11 +30,11 @@
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
     "autoprefixer": "^10.4.20",
-    "eslint-config-typescript-vitnode": "0.0.10-canary.35",
+    "eslint-config-typescript-vitnode": "0.1.0-rc.0",
     "postcss": "^8.4.49",
     "shared": "workspace:*",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.2",
-    "vitnode-shared": "0.0.10-canary.35"
+    "vitnode-shared": "0.1.0-rc.0"
   }
 }
