--- a/apps/shared/package.json
+++ b/apps/shared/package.json
@@ -24,8 +24,8 @@
     "@types/node": "^22.10.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "eslint-config-typescript-vitnode": "0.0.10-canary.35",
+    "eslint-config-typescript-vitnode": "0.1.0-rc.0",
     "typescript": "^5.7.2",
-    "vitnode-shared": "0.0.10-canary.35"
+    "vitnode-shared": "0.1.0-rc.0"
   }
 }
