--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -28,19 +28,19 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "reflect-metadata": "^0.2.2",
-    "vitnode-backend": "0.1.0-rc.0"
+    "vitnode-backend": "0.1.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.4.9",
     "@nestjs/schematics": "^10.2.3",
     "@swc/cli": "^0.5.2",
     "@types/express": "^5.0.0",
-    "@types/node": "^22.10.2",
+    "@types/node": "^22.10.5",
     "@types/react": "^19.0.2",
     "cross-env": "^7.0.3",
-    "eslint-config-typescript-vitnode": "0.1.0-rc.0",
+    "eslint-config-typescript-vitnode": "0.1.1",
     "shared": "workspace:*",
     "typescript": "^5.7.2",
-    "vitnode-shared": "0.1.0-rc.0"
+    "vitnode-shared": "0.1.1"
   }
 }
