--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -16,25 +16,25 @@
     "geist": "^1.3.1",
     "lucide-react": "^0.469.0",
     "next": "^15.1.3",
-    "next-intl": "^3.26.3",
+    "next-intl": "4.0.0-beta-ddd5ae5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.0",
     "sonner": "^1.7.1",
-    "vitnode-frontend": "0.1.0-rc.0",
+    "vitnode-frontend": "0.1.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@types/node": "^22.10.2",
+    "@types/node": "^22.10.5",
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
     "autoprefixer": "^10.4.20",
-    "eslint-config-typescript-vitnode": "0.1.0-rc.0",
+    "eslint-config-typescript-vitnode": "0.1.1",
     "postcss": "^8.4.49",
     "shared": "workspace:*",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.2",
-    "vitnode-shared": "0.1.0-rc.0"
+    "vitnode-shared": "0.1.1"
   }
 }
